codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_idle_h1.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 1479
expression: terminal.backend()
---
" ◦  tui  󱚥 gpt-5-codex              "
